--- a/Index.html
+++ b/Index.html
@@ -2,15 +2,16 @@
 <!--Start with Doc type. -->
 <!DOCTYPE html>
 <!-- Next add our HTML tags. -->
-<html>
+<html style="background-color: rgb(0, 0, 46);">
     <!-- add title -->
     <head>
+        <link rel="icon" href="Favicon.svg" type="image/x-icon">
     <title>Moon game</title>
     <!-- Add meta tag-->
      <meta charset="utf-8">
     </head>
     <!-- add body and header tag-->
-    <body>
+    <body style="color:white">
         <header>
         <h1>Lunar Outpost</h1>
         <!-- Add Paragraph tags to explain game-->
@@ -19,7 +20,7 @@
         <!--This is where the game area is and where your stats will be desplayed-->
         <main id="game-area"></main>
         <!-- Add Jacascript Section-->
-         <script>
+         <script >
     // We are now in javascript land! Notice our different syntax for the comments!
     // Initialize game variables
     let energy = 100; // This is the amount of energy we have
